--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                  <img src="/images/password.ico" width="60%">
             </label>
             <input type="password" name="password"
-            placeholder="Contraseña" id="password" required>
+            placeholder="Contraseñas" id="password" required>
             <input type="submit" value="Acceder">
         </form>
     </div>
