--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                <img src="/images/login.ico" width="55%">
             </label>
             <input type="text" name="username"
-            placeholder="Usuario" id="username" required>
+            placeholder="Usuarios" id="username" required>
             <label for="password">
                  <img src="/images/password.ico" width="60%">
             </label>
             <input type="password" name="password"
-            placeholder="Contraseñas" id="password" required>
+            placeholder="Contraseña" id="password" required>
             <input type="submit" value="Acceder">
         </form>
     </div>
