--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                <img src="/images/login.ico" width="55%">
             </label>
             <input type="text" name="username"
-            placeholder="Usuarios" id="username" required>
+            placeholder="Usuario" id="username" required>
             <label for="password">
                  <img src="/images/password.ico" width="60%">
             </label>
